--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,13 +34,21 @@ body {
 }
 
 .collection {
-	margin: 20px;
-	display: grid;
-	grid-template-rows: repeat(auto-fit);
-	grid-template-columns: repeat(8, 1fr);
+	margin-left: 20px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: start;
-	justify-items: stretch;
 	border: 2px solid black;
+	width: auto;
+}
+
+.cover-art-container {
+	position: relative;
+	min-height: 200px;
+	min-width: 200px;
+	max-height: 200px;
+	max-width: 200px;
 }
 
 .card {
