--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 }*/
 
 body {
-	background-color: grey;
+	background-color: #d4d4d8;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -24,12 +24,33 @@ body {
 	margin: auto;
 }
 
+h1 {
+	font-size: 30px;
+	font-weight: 550;
+}
+
+.header {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	height: 80px;
+	background-color: #ca8a04;
+	font-size: larger;
+}
+
+.header-side {
+	width: 40px;
+	justify-content: center;
+	margin: 20px;
+}
+
 .top {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 100px;
+	height: 50px;
 	position: relative;
 }
 
@@ -59,6 +80,15 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
+	overflow: hidden;
+}
+
+.small-card {
+	height: 50px;
+	width: 400px;
+	border: 1px solid black;
+	display: flex;
+	flex-direction: row;
 	overflow: hidden;
 }
 
